--- a/dripdash/package.json
+++ b/dripdash/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-router-dom": "^6.29.0",
     "sass": "^1.84.0"
   },
   "devDependencies": {
